// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Default render. 1`] = `
<div
  className="dialog-content"
>
  <div
    className="linear-progress"
  >
    <div
      className="bar bar1"
    />
    <div
      className="bar bar2"
    />
  </div>
</div>
`;

exports[`(2) With data. 1`] = `
<div
  className="dialog-content"
>
  <div
    className="linear-progress"
  >
    <div
      className="bar bar1"
    />
    <div
      className="bar bar2"
    />
  </div>
</div>
`;

exports[`(3) Add 1`] = `
<div
  className=""
>
  <form
    className=""
    onSubmit={[Function]}
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
        htmlFor="title"
      >
        Title
      </label>
      <input
        autoFocus={true}
        className="form-control"
        id="title"
        maxLength={255}
        onChange={[Function]}
        onInput={[Function]}
        onInvalid={[Function]}
        required={true}
        type="text"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label
        className="form-label"
        htmlFor="body"
      >
        Body
      </label>
      <textarea
        className="form-control"
        id="body"
        maxLength={5000}
        onChange={[Function]}
        onInput={[Function]}
        onInvalid={[Function]}
        required={true}
        style={
          Object {
            "height": "300px",
          }
        }
        type="text"
        value=""
      />
    </div>
    <div
      className="flex justify-between"
    >
      <button
        className="btn btn-outline-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Back
      </button>
      <button
        className="btn btn-primary"
        disabled={false}
        type="submit"
      >
        Add
      </button>
    </div>
  </form>
</div>
`;

exports[`(4) Edit 1`] = `
<form
  className=""
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <label
      className="form-label"
      htmlFor="title"
    >
      Title
    </label>
    <input
      autoFocus={true}
      className="form-control"
      id="title"
      maxLength={255}
      onChange={[Function]}
      onInput={[Function]}
      onInvalid={[Function]}
      required={true}
      type="text"
      value="baz"
    />
  </div>
  <div
    className="form-group"
  >
    <label
      className="form-label"
      htmlFor="body"
    >
      Body
    </label>
    <textarea
      className="form-control"
      id="body"
      maxLength={5000}
      onChange={[Function]}
      onInput={[Function]}
      onInvalid={[Function]}
      required={true}
      style={
        Object {
          "height": "300px",
        }
      }
      type="text"
      value="lorem ipsum dolor sit amet"
    />
  </div>
  <div
    className="flex justify-between"
  >
    <div>
      <button
        className="btn btn-outline-danger"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "marginRight": "6px",
          }
        }
        type="button"
      >
        Delete
      </button>
      <button
        className="btn btn-outline-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Back
      </button>
    </div>
    <button
      className="btn btn-primary"
      disabled={false}
      type="submit"
    >
      Update
    </button>
  </div>
</form>
`;
